implement pattern into page, start working on design

--- a/test.html
+++ b/test.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <header>scroll val: </header>
+    <header>
+        <span>welcome</span>
+        <span>to</span>
+        <span id="big-head">CHUCKDOTSYSTEMS</span>
+        <span>!</span>
+        <span>!</span>
+    </header>
     <main>
-        <div id="container">
-            <p id="text">
-                CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;
-            </p>
-        </div>
+        
     </main>
     <footer>
         <div>my links:</div>
@@ -26,6 +28,11 @@
         </div>
     </footer>
 
+    <div id="bg-container">
+        <p id="text">
+            CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;CHARLES&nbsp;DIGIOVANNI&nbsp;
+        </p>
+    </div>
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
         <defs>
             <filter id="displacement_noise">
