basic fill content

--- a/test.html
+++ b/test.html
@@ -20,12 +20,18 @@
     
         <main>
             <div id="main-container">
-                <section class="frosted">a</section>
-                <section>b</section>
-                <section>c</section>
-                <section>d</section>
-                <section>e</section>
-                <section>f</section>
+                <section class="frosted">
+                    include image of something put thru stegnog
+                </section>
+                <section>
+                    steganography
+                </section>
+                <section>
+                    honeypot
+                </section>
+                <section class="frosted">include graph of honeypot data</section>
+                <section>chess</section>
+                <section>chess engine</section>
             </div>
         </main>
     
