--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test.css">
-    <title>Among Us</title>
+    <link rel="stylesheet" href="index.css">
+    <title>chuck.systems</title>
 </head>
 
 <body>
@@ -66,7 +66,7 @@
             </filter>
         </defs>
     </svg>
-    <script src="test.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
