scaffold non-goop site

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-
+        This is the header
     </header>
     <main>
-        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, eaque architecto recusandae voluptatum eos veniam expedita quisquam, rem error esse maxime, enim odio optio non beatae molestiae. Id, autem eveniet.
     </main>
     <footer>
-
+        By Charles DiGiovanni, 2025
     </footer>
     <script src="index.js"></script>
 </body>
